bynkc/tests/fixtures/negative/361_refined_unsafe_rejected/input.bynk
commons demo {
  type Age = Int where InRange(0, 150)

  fn mk(n: Int) -> Age {
    Age.unsafe(n)
  }
}
